He podido añadir la biliografía pero tiene que ser por lineas de comandos en la terminal la ejecución.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,16 +9,24 @@
     {
       "name": "latexmk-xe",
       "command": "latexmk",
-      "args": ["-xelatex", "-interaction=nonstopmode", "-synctex=1", "%DOC%"]
+      "args": [
+        "-xelatex",
+        "-interaction=nonstopmode",
+        "-synctex=1",
+        "%DOC%"
+      ]
     },
     {
-      "name": "clean-glob",
-      "command": "latexmk",
-      "args": ["-C", "%DOC%"]
+      "name": "bibtex",
+      "command": "bibtex",
+      "args": ["%DOCFILE%"]
     }
   ],
   "latex-workshop.latex.recipes": [
-    { "name": "latexmk (XeLaTeX)", "tools": ["latexmk-xe"] }
+    {
+      "name": "XeLaTeX → BibTeX → XeLaTeX (2x)",
+      "tools": ["latexmk-xe", "bibtex", "latexmk-xe", "latexmk-xe"]
+    }
   ],
   "latex-workshop.view.pdf.viewer": "tab",
   "latex-workshop.latex.autoBuild.run": "never"
